--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -4,8 +4,8 @@
     text-transform: uppercase;
     cursor: pointer;
     height: 40px;
-    width: 200px;
-    padding: 10px;
+    width: 100%;
+    padding: 0px 10px;
     border-style: none;
     border-radius: 4px;
     font-weight: 500;
