--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,5 +1,5 @@
 .button{
-    background-color: #1B2626;
+    background-color: black;
     color: #D9D9D9;
     text-transform: uppercase;
     cursor: pointer;
