--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
     margin: 50px;
     overflow: auto;
     min-height: 300px;
-    border: 1px solid #627173;
+    border: 1px solid #615438;
     padding: 30px;
     border-radius: 8px;
-    background-color: #4A5859;
+    background-color: #E0AD3F;
 }
