--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,6 +1,6 @@
 .button{
-    background-color: black;
-    color: #D9D9D9;
+    background-color: #615438;
+    color: #E6C785;
     text-transform: uppercase;
     cursor: pointer;
     height: 40px;
