--- a/src/components/AddTask.css
+++ b/src/components/AddTask.css
@@ -10,7 +10,7 @@
     border-radius: 4px;
     padding: 0 10px;
     flex: 2;
-    background-color: #D9D9D9;
+    background-color: #E6C785;
     font-size: 18px;
 }
 
